examples: fix a few cases that break initial scroll position

--- a/examples/chat-webpack/src/styles.css
+++ b/examples/chat-webpack/src/styles.css
@@ -49,6 +49,7 @@ body {
   margin: 0;
   padding-top: 3px;
   padding-left: 6px;
+  overflow-wrap: break-word;
 }
 
 #sidebar {
